gen/chat/v1/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-chat1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/chat/v1/lib)
error[E0423]: expected value, found struct `members::MembersActions`
    --> gen/chat/v1/lib/src/lib.rs:1687:13
     |
1687 |             members::MembersActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^ did you mean `members::MembersActions { /* fields */ }`?

error[E0423]: expected value, found struct `messages::MessagesActions`
    --> gen/chat/v1/lib/src/lib.rs:1691:13
     |
1691 |             messages::MessagesActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `messages::MessagesActions { /* fields */ }`?

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-chat1`.

To learn more, run the command again with --verbose.
